Made progress on timer functionality.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
    </head>
    <body>
       <div class="container">
+         <div class="game-over"><div id="sorry"><span>Sorry, the next color was <span id="real-answer"></span></span></div>
+            <span id="start-over">Try Again?</span>
+         </div>
+         </div>
          <div class="game-box">
             <div class="square" id="red"></div>
             <div class="square" id="blue"></div>
