Logic is 100% done. Added score.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="square" id="green"></div>
          </div>
          <input type="submit" id="start-game" </input>
+         <span class="score"></span>
       </div>
 
       <script src="./main.js"></script>
