Cleaned up the UI.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
             <div class="square" id="blue"></div>
             <div class="square" id="yellow"></div>
             <div class="square" id="green"></div>
-            <div class="score">
-            <!-- <span>You've lasted</span> -->
-            <span class="calc-score">1</span>
-            <span class="round">ROUND</span>
+            <div class="score" id="start">Start</div>               
             </div>
          </div>
          <div class="light"></div>
